--- a/files/documentation/project.ipynb
+++ b/files/documentation/project.ipynb
@@ -4,64 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Hola Mauricio!\n",
-    "\n",
-    "Mi nombre es David Bautista, soy code reviewer de TripleTen y voy a revisar el proyecto que acabas de desarrollar.\n",
-    "\n",
-    "Cuando vea un error la primera vez, lo señalaré. Deberás encontrarlo y arreglarlo. La intención es que te prepares para un espacio real de trabajo. En un trabajo, el líder de tu equipo hará lo mismo. Si no puedes solucionar el error, te daré más información en la próxima ocasión.\n",
-    "\n",
-    "Encontrarás mis comentarios más abajo - **por favor, no los muevas, no los modifiques ni los borres.**\n",
-    "\n",
-    "¿Cómo lo voy a hacer? Voy a leer detenidamente cada una de las implementaciones que has llevado a cabo para cumplir con lo solicitado. Verás los comentarios de esta forma:\n",
-    "\n",
-    "<div class=\"alert alert-block alert-success\">\n",
-    "<b>Comentario del revisor</b> <a class=\"tocSkip\"></a>\n",
-    "    \n",
-    "Si todo está perfecto.\n",
-    "</div>\n",
-    "\n",
-    "\n",
-    "<div class=\"alert alert-block alert-warning\">\n",
-    "<b>Comentario del revisor</b> <a class=\"tocSkip\"></a>\n",
-    "    \n",
-    "Si tu código está bien pero se puede mejorar o hay algún detalle que le hace falta.\n",
-    "</div>\n",
-    "\n",
-    "\n",
-    "<div class=\"alert alert-block alert-danger\">\n",
-    "    \n",
-    "<b>Comentario del revisor</b> <a class=\"tocSkip\"></a>\n",
-    "    \n",
-    "    \n",
-    "Si de pronto hace falta algo o existe algún problema con tu código o conclusiones.\n",
-    "</div>\n",
-    "\n",
-    "\n",
-    "Puedes responderme de esta forma: \n",
-    "\n",
-    "<div class=\"alert alert-block alert-info\">\n",
-    "<b>Respuesta del estudiante</b> <a class=\"tocSkip\"></a>\n",
-    "</div>\n",
-    "\n",
-    "¡Empecemos!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-success\">\n",
-    "<b>Comentario del revisor </b> <a class=\"tocSkip\"></a>\n",
-    "\n",
-    "# Comentario General\n",
-    "    \n",
-    "Hola Mauricio, te felicito por el buen desarrollo del proyecto. Completaste cada una de las secciones de muy buena manera. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# OilGiant"
    ]
   },
@@ -92,16 +34,6 @@
     "- *id* — identificador único de pozo de petróleo\n",
     "- *f0, f1, f2* — tres características de los puntos (su significado específico no es importante, pero las características en sí son significativas)\n",
     "- *product* — volumen de reservas en el pozo de petróleo (miles de barriles)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-success\">\n",
-    "<b>Comentario del revisor </b> <a class=\"tocSkip\"></a>\n",
-    "\n",
-    "Buen trabajo estructurando esta sección de introducción. "
    ]
   },
   {
@@ -141,16 +73,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-success\">\n",
-    "<b>Comentario del revisor </b> <a class=\"tocSkip\"></a>\n",
-    "\n",
-    "Perfecto, buen trabajo importando las librerías necesarias para el desarrollo del proyecto.  </div> "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Analisis exploratorio"
    ]
   },
@@ -166,16 +88,6 @@
     "data0 = pd.read_csv('/datasets/geo_data_0.csv')\n",
     "data1 = pd.read_csv('/datasets/geo_data_1.csv')\n",
     "data2 = pd.read_csv('/datasets/geo_data_2.csv')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-success\">\n",
-    "<b>Comentario del revisor </b> <a class=\"tocSkip\"></a>\n",
-    "\n",
-    "Perfecto, buen trabajo cargando los datasets.   </div> "
    ]
   },
   {
@@ -704,26 +616,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-success\">\n",
-    "<b>Comentario del revisor </b> <a class=\"tocSkip\"></a>\n",
-    "\n",
-    "Perfecto, buen trabajo realizando esta exploración inicial del contenido de cada uno de los datasets.   </div> \n",
-    "\n",
-    "\n",
-    "<div class=\"alert alert-block alert-warning\">\n",
-    "<b>Comentario del revisor </b> <a class=\"tocSkip\"></a>\n",
-    "\n",
-    "Adicionalmente, a la exploración ya realizada sería interesante revisar si existen registros/valores duplicados dentro de los datasets.   </div> \n",
-    "\n",
-    "<div class=\"alert alert-block alert-info\">\n",
-    "<b>De acuerdo, se revisará</b> <a class=\"tocSkip\"></a>\n",
-    "</div>\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Correlación de datos"
    ]
   },
@@ -797,16 +689,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-success\">\n",
-    "<b>Comentario del revisor </b> <a class=\"tocSkip\"></a>\n",
-    "\n",
-    "Perfecto, buen trabajo estudiando las correlaciones entre las características de cada uno de los datasets .   </div> "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Comentarios"
    ]
   },
@@ -819,16 +701,6 @@
     "1. Se considera que los tipos de datos son adecuados. \n",
     "1. No hay valores ausentes\n",
     "1. En todas las regiones parece ser que la caracteristica 2 tiene gran impacto en la variable objetivo en menos o mayor medida.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-success\">\n",
-    "<b>Comentario del revisor </b> <a class=\"tocSkip\"></a>\n",
-    "\n",
-    "Buen trabajo.   </div> "
    ]
   },
   {
@@ -917,15 +789,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-info\">\n",
-    "<b>Pregunta con respecto al manejo del modelo y la division de los datos vs cross_val_score</b> <a class=\"tocSkip\"></a>\n",
-    "</div>\n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
@@ -943,20 +806,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Data_analysis and modeling\n",
     "def data_analysis(data, state):\n",
-    "    \n",
-    "    # Segmentacion de datos\n",
-    "    #features_train, features_valid, target_train, target_valid = data_segmentation(data, state)\n",
-    "\n",
-    "    # Get model based on training\n",
-    "    #model = train_and_get_model(features_train, target_train)\n",
-    "\n",
-    "    \n",
     "    \n",
     "    ## Just to test ##\n",
     "    # Obteniendo los features\n",
@@ -979,34 +834,7 @@
     "    display_metrics(target, target_pred_as_mean)\n",
     "    ## Just to test ##\n",
     "    \n",
-    "    \n",
-    "    \n",
-    "\n",
-    "    \n",
-    "    # Show metrics\n",
-    "    # Make predictions using the validation set\n",
-    "    #target_pred = model.predict(features_valid)\n",
-    "    #print()\n",
-    "    #print(\"Model results:\")\n",
-    "    #display_metrics(target_valid, target_pred)\n",
-    "    \n",
-    "    # Performing a test over mean\n",
-    "    #print()\n",
-    "    #print(\"Sanity Test (pred=mean):\")\n",
-    "    #target_pred_as_mean = pd.Series(target_valid.mean(), target_valid.index)\n",
-    "    #display_metrics(target_valid, target_pred_as_mean)\n",
-    "\n",
     "    return model\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-success\">\n",
-    "<b>Comentario del revisor </b> <a class=\"tocSkip\"></a>\n",
-    "\n",
-    "Perfecto, buen trabajo estructurando cada una de las funciones de manera modular para desplegar los diferentes modelos. Muy buen trabajo, te felicito por el uso de estas estructuras ya más avanzadas.  </div> "
    ]
   },
   {
@@ -1151,16 +979,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-success\">\n",
-    "<b>Comentario del revisor </b> <a class=\"tocSkip\"></a>\n",
-    "\n",
-    "Perfecto, buen trabajo realizando el despliegue y estudio de los modelos. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Analisis de negocio"
    ]
   },
@@ -1234,16 +1052,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-success\">\n",
-    "<b>Comentario del revisor </b> <a class=\"tocSkip\"></a>\n",
-    "\n",
-    "Perfecto, buen trabajo. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Calculando la ganancia de un conjunto de pozos"
    ]
   },
@@ -1296,16 +1104,6 @@
    "source": [
     "#### Comantarios:\n",
     "De lo anterior y basado en el producto promedio mas alto se comprueba que la region 2 es la mas rentable con el mas alto margen de ganancias."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-success\">\n",
-    "<b>Comentario del revisor </b> <a class=\"tocSkip\"></a>\n",
-    "\n",
-    "Excelente, buen trabajo realizando el cálculo de las ganancias."
    ]
   },
   {
@@ -1384,15 +1182,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-info\">\n",
-    "<b>Duda sobre el mejor camino para utilizar bootstrapping</b> <a class=\"tocSkip\"></a>\n",
-    "</div>\n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
@@ -1436,20 +1225,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-success\">\n",
-    "<b>Comentario del revisor </b> <a class=\"tocSkip\"></a>\n",
-    "\n",
-    "Perfecto, buen trabajo aplicando el bootstraping."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Comentarios Finales\n",
     "\n",
-    "    3. Presenta tus conclusiones: propón una región para el desarrollo de pozos petrolíferos y justifica tu elección. ¿Coincide tu elección con la elección anterior en el punto 4.3?\n",
-    "    \n",
     "    \n",
     "#### Resumen    \n",
     "\n",
@@ -1500,16 +1277,6 @@
    ],
    "source": [
     "print(\"Done!\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-success\">\n",
-    "<b>Comentario del revisor </b> <a class=\"tocSkip\"></a>\n",
-    "\n",
-    "Muy buen trabajo!"
    ]
   }
  ],
@@ -3157,7 +2924,7 @@
    }
   ],
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv (3.13.7)",
    "language": "python",
    "name": "python3"
   },
@@ -3171,7 +2938,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.13.7"
   },
   "toc": {
    "base_numbering": 1,
